End of section 11

--- a/src/GatewayService/appsettings.Development.json
+++ b/src/GatewayService/appsettings.Development.json
@@ -10,7 +10,7 @@
     "Clusters": {
       "auctions": {
         "Destinations": {
-          "actionsApi": {
+          "actionApi": {
             "Address": "http://localhost:7001"
           }
         }
@@ -21,7 +21,14 @@
             "Address": "http://localhost:7002"
           }
         }
-      }
+      },
+      "bids": {
+        "Destinations": {
+          "bidApi": {
+            "Address": "http://localhost:7003"
+          }
+        }
+      }      
     }
   }
 }
