--- a/src/GatewayService/appsettings.Docker.json
+++ b/src/GatewayService/appsettings.Docker.json
@@ -10,7 +10,7 @@
     "Clusters": {
       "auctions": {
         "Destinations": {
-          "actionsApi": {
+          "actionApi": {
             "Address": "http://auction-svc"
           }
         }
@@ -21,7 +21,14 @@
             "Address": "http://search-svc"
           }
         }
-      }
+      },
+      "bids": {
+        "Destinations": {
+          "bidApi": {
+            "Address": "http://bid-svc"
+          }
+        }
+      }       
     }
   }
 }
