--- a/src/IdentityService/Dockerfile
+++ b/src/IdentityService/Dockerfile
@@ -15,6 +15,7 @@ COPY src/SearchService/SearchService.csproj ./src/SearchService/SearchService.cs
 COPY src/Contracts/Contracts.csproj ./src/Contracts/Contracts.csproj
 COPY src/GatewayService/GatewayService.csproj ./src/GatewayService/GatewayService.csproj
 COPY src/IdentityService/IdentityService.csproj ./src/IdentityService/IdentityService.csproj
+COPY src/BiddingService/BiddingService.csproj ./src/BiddingService/BiddingService.csproj
 
 # Restore package dependencies for the entire solution (install dependencies)
 RUN dotnet restore Carsties.sln
