--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -77,7 +77,20 @@ services:
     depends_on:
       - mongo
       - rabbitmq
-      - auction-svc      
+      - auction-svc   
+  notify-svc:
+    image: piotrfranekjan/notify-svc:latest
+    build:
+      context: .
+      dockerfile: ./src/NotificationService/Dockerfile
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_URLS=http://+:80
+      - RabbitMq__Host=rabbitmq
+    ports:  
+      - 7004:80
+    depends_on:
+      - rabbitmq
   identity-svc:
     image: piotrfranekjan/identity-svc:latest
     build:
