--- a/src/IdentityService/Dockerfile
+++ b/src/IdentityService/Dockerfile
@@ -16,6 +16,7 @@ COPY src/Contracts/Contracts.csproj ./src/Contracts/Contracts.csproj
 COPY src/GatewayService/GatewayService.csproj ./src/GatewayService/GatewayService.csproj
 COPY src/IdentityService/IdentityService.csproj ./src/IdentityService/IdentityService.csproj
 COPY src/BiddingService/BiddingService.csproj ./src/BiddingService/BiddingService.csproj
+COPY src/NotificationService/NotificationService.csproj ./src/NotificationService/NotificationService.csproj
 
 # Restore package dependencies for the entire solution (install dependencies)
 RUN dotnet restore Carsties.sln
