End of section 14

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,9 @@
+networks:
+  custom:  
+    ipam: 
+      config: 
+        - subnet: 10.5.0.0/16
+
 services:
   postgres:
     image: postgres
@@ -7,6 +13,8 @@ services:
       - 5432:5432
     volumes:
       - pgdata:/var/lib/postgresql/data
+    networks:
+      custom:      
   mongo:
     image: mongo
     environment:
@@ -16,11 +24,15 @@ services:
       - 27017:27017
     volumes:
       - mongodata:/var/lib/mongodb/data
+    networks:
+      custom:         
   rabbitmq:
     image: rabbitmq:3-management-alpine
     ports:
       - 5672:5672
       - 15672:15672
+    networks:
+      custom:         
   auction-svc:
     image: piotrfranekjan/auction-svc:latest
     build:
@@ -40,6 +52,8 @@ services:
     ports:
       - 7001:80
       - 7777:7777
+    networks:
+      custom:         
     depends_on:
       - postgres
       - rabbitmq
@@ -56,6 +70,8 @@ services:
       - AuctionServiceUrl=http://auction-svc
     ports:
       - 7002:80
+    networks:
+      custom:         
     depends_on:
       - mongo
       - rabbitmq
@@ -74,6 +90,8 @@ services:
       - GrpcAuction=http://auction-svc:7777
     ports:
       - 7003:80
+    networks:
+      custom:         
     depends_on:
       - mongo
       - rabbitmq
@@ -89,6 +107,8 @@ services:
       - RabbitMq__Host=rabbitmq
     ports:  
       - 7004:80
+    networks:
+      custom:         
     depends_on:
       - rabbitmq
   identity-svc:
@@ -100,8 +120,14 @@ services:
       - ASPNETCORE_ENVIRONMENT=Docker
       - ASPNETCORE_URLS=http://+:80
       - ConnectionStrings__DefaultConnection=Server=postgres:5432;User Id=postgres;Password=postgrespw;Database=identity
-    ports:
-      - 5000:80
+      - ClientApp=http://app.carsties.com 
+      - VIRTUAL_HOST=id.carsties.com      
+    # ports:
+      # - 5000:80
+      # - 80:80
+    networks:
+      custom:  
+        ipv4_address: 10.5.0.200       
     depends_on:
       - postgres
   gateway-svc:
@@ -112,8 +138,47 @@ services:
     environment:
       - ASPNETCORE_ENVIRONMENT=Docker
       - ASPNETCORE_URLS=http://+:80
+      - ClientApp=https://app.carsties.com
+      - VIRTUAL_HOST=api.carsties.com      
+    networks:
+      custom:         
+    # ports:
+    #  - 6001:80
+  web-app:
+    image: piotrfranekjan/web-app:latest
+    build:
+      context: .
+      dockerfile: ./frontend/web-app/Dockerfile
+    volumes:
+      - webappdata:/var/lib/web/data      
+    environment:
+      - NEXTAUTH_SECRET=somethingreallyreallysecret
+      - NEXTAUTH_URL=http://app.carsties.com
+      - NEXTAUTH_URL_INTERNAL=http://web-app:3000    
+      - API_URL=http://gateway-svc/
+      - ID_URL=http://id.carsties.com
+      - NEXT_PUBLIC_NOTIFY_URL=http://gateway-svc/notifications
+      - VIRTUAL_HOST=app.carsties.com 
+      - VIRTUAL_PORT=3000
+    # ports:
+    #   - 3000:3000   
+    networks:
+      custom:            
+    extra_hosts:
+      - id.carsties.com:10.5.0.200
+
+  nginx-proxy:
+    image: nginxproxy/nginx-proxy
     ports:
-      - 6001:80
+      - 80:80
+      - 443:443
+    networks:
+      custom:       
+    volumes:
+      - //var/run/docker.sock:/tmp/docker.sock:ro
+      - ./devcerts:/etc/nginx/certs
+
 volumes:
   pgdata:
   mongodata:
+  webappdata:
