--- a/src/SearchService/Dockerfile
+++ b/src/SearchService/Dockerfile
@@ -17,6 +17,8 @@ COPY src/GatewayService/GatewayService.csproj ./src/GatewayService/GatewayServic
 COPY src/IdentityService/IdentityService.csproj ./src/IdentityService/IdentityService.csproj
 COPY src/BiddingService/BiddingService.csproj ./src/BiddingService/BiddingService.csproj
 COPY src/NotificationService/NotificationService.csproj ./src/NotificationService/NotificationService.csproj
+COPY test/AuctionService.UnitTests/AuctionService.UnitTests.csproj ./test/AuctionService.UnitTests/AuctionService.UnitTests.csproj
+COPY test/AuctionService.IntegrationTests/AuctionService.IntegrationTests.csproj ./test/AuctionService.IntegrationTests/AuctionService.IntegrationTests.csproj
 
 # Restore package dependencies for the entire solution (install dependencies)
 RUN dotnet restore Carsties.sln
