--- a/src/BiddingService/BiddingService.csproj
+++ b/src/BiddingService/BiddingService.csproj
@@ -18,6 +18,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.15" />
     <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="7.0.15" />
     <PackageReference Include="MongoDB.Entities" Version="23.0.1" />
+    <PackageReference Include="Polly" Version="7.2.4" />
   </ItemGroup>
 
   <ItemGroup>
