--- a/src/IdentityService/IdentityService.csproj
+++ b/src/IdentityService/IdentityService.csproj
@@ -7,6 +7,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="Duende.IdentityServer.AspNetIdentity" Version="6.3.0" />
+		<PackageReference Include="Polly" Version="7.2.4" />
 
 		<PackageReference Include="Serilog.AspNetCore" Version="6.0.0" />
 
